--- a/093_eval3/Makefile
+++ b/093_eval3/Makefile
@@ -1,2 +1,2 @@
-cyoa-step1:cyoa-step1.cpp page.hpp choice.hpp pstory.hpp
-	g++ -o cyoa-step1 -pedantic -std=gnu++98 -Werror -Wall cyoa-step1.cpp
+cyoa-step1:cyoa-step1.cpp readStory.hpp readStory.cpp page.hpp page.cpp choice.hpp pstory.hpp pstory.cpp
+	g++ -o cyoa-step1 -pedantic -std=gnu++98 -Werror -Wall cyoa-step1.cpp readStory.hpp readStory.cpp page.hpp page.cpp choice.hpp pstory.hpp pstory.cpp
