--- a/093_eval3/Makefile
+++ b/093_eval3/Makefile
@@ -6,3 +6,6 @@ cyoa-step2:cyoa-step2.cpp readStory.hpp readStory.cpp page.hpp page.cpp choice.h
 
 cyoa-step3:cyoa-step3.cpp readStory.hpp readStory.cpp page.hpp page.cpp choice.hpp choice.cpp pstory.hpp pstory.cpp
 	g++ -o cyoa-step3 -pedantic -std=gnu++98 -Werror -Wall cyoa-step3.cpp readStory.hpp readStory.cpp page.hpp page.cpp choice.hpp choice.cpp pstory.hpp pstory.cpp
+
+cyoa-step4:cyoa-step4.cpp readStory.hpp readStory.cpp page.hpp page.cpp choice.hpp choice.cpp pstory.hpp pstory.cpp
+	g++ -o cyoa-step4 -pedantic -std=gnu++98 -Werror -Wall cyoa-step4.cpp readStory.hpp readStory.cpp page.hpp page.cpp choice.hpp choice.cpp pstory.hpp pstory.cpp
